add date to ingreso de gastos, added staff decorator to views, added option to set user as staff in ingreso de usuario

--- a/mysite/templates/pagos/ingreso_gasto.html
+++ b/mysite/templates/pagos/ingreso_gasto.html
@@ -12,4 +12,18 @@
 		</div>
 	</form>
 </div>
+<script type="text/javascript">
+	$(document).ready(() => {
+		$("#id_fecha_gasto").datepicker({
+            dateFormat: "dd/mm/yy",
+			altFormat: "yy-mm-dd",
+			showButtonPanel: true,
+			changeYear: true,
+			showOtherMonths: true,
+			selectOtherMonths: false,
+			yearRange: String(parseInt(new Date().getFullYear()) - 100) + ':'+ String(new Date().getFullYear()),
+        	maxDate: '0',
+        })
+	})
+</script>
 {% endblock content %}
