--- a/mysite/templates/base_datatable.html
+++ b/mysite/templates/base_datatable.html
@@ -43,7 +43,7 @@
                     <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra a Estudiante</a>
                     <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a Curso</a>
                     <a class="navbar-a" href="{% url 'pagos:pantalla_pivote' %}">Tabla Pivote</a>
-                    <a class="navbar-a" href="{% url 'pagos:definicion_tipo_pago' %}">Definir tipos de pago</a>
+                   <!-- <a class="navbar-a" href="{% url 'pagos:definicion_tipo_pago' %}">Definir tipos de pago</a>-->
                 </div>
             </div>
             <div class="dropdown navbar-item">
