--- a/mysite/templates/pagos/definicion_tipo_pago.html
+++ b/mysite/templates/pagos/definicion_tipo_pago.html
@@ -8,7 +8,7 @@
 	<form action="" method="post" class="input-form">
 		<div class="form-title-container"><h4 class="form-title">Definir tipo de pago</h4></div>
 				{% csrf_token %}
-				{{form_cobros_extra}}
+				{{form}}
 		<div class="btn-container">
 			<input class="btn btn-buscar" type="submit" value="Crear">
 		</div>
