--- a/mysite/templates/base_datatable.html
+++ b/mysite/templates/base_datatable.html
@@ -60,6 +60,7 @@
                     <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
                     <a class="navbar-a" href="{% url 'usuarios:create_curso' %}">Crear Curso</a>
                     <a class="navbar-a" href="{% url 'usuarios:asignar_curso' %}">Asignar Curso</a>
+                    <a class="navbar-a" href="{% url 'usuarios:definir_nivel_academico' %}">Definir nivel academico</a>
                 </div>
             </div>
             <a class="navbar-a" href="{% url 'usuarios:logout' %}"><li class="navbar-item item-title">Logout</li></a>
