--- a/mysite/templates/pagos/definicion_tipo_pago.html
+++ b/mysite/templates/pagos/definicion_tipo_pago.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 	<form action="" method="post" class="input-form">
-		<div class="form-title-container"><h4 class="form-title">Definir tipo de pago</h4></div>
+		<h4 class="form-title">Definir tipo de pago</h4>
 				{% csrf_token %}
 				{{form}}
 		<div class="btn-container">
