--- a/mysite/templates/pagos/ingreso_gasto.html
+++ b/mysite/templates/pagos/ingreso_gasto.html
@@ -3,12 +3,12 @@
 {% block content %}
 
 <div class="container">
-	<form action="" method="post">
+	<form action="" method="post" class="input-form">
 		<h4 class="form-title">Ingresar Gasto</h4>
 				{% csrf_token %}
 				{{form}}
 		<div class="btn-container">
-			<input class="btn btn-buscar" type="submit" value="Ingresar Gasto">
+			<input class="btn btn-buscar" type="submit" value="Crear">
 		</div>
 	</form>
 </div>
