--- a/mysite/templates/usuarios/create_student.html
+++ b/mysite/templates/usuarios/create_student.html
@@ -6,12 +6,12 @@
 
 <div class="container">
 	<form action="" method="post" class="input-form">
-		<h4 class="form-title">Crear Operativo</h4>
+		<h4 class="form-title">Crear Estudiante</h4>
 				{% csrf_token %}
 				{{form1}}
 				{{form2}}
 		<div class="btn-container">
-			<input class="btn btn-buscar" type="submit" value="Crear Operativo">
+			<input class="btn btn-buscar" type="submit" value="Crear Estudiante">
 		</div>
 	</form>
 </div>
