added mororos email and fixed bugs

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -25,7 +25,8 @@
                 <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
                 <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a curso</a>
                 <a class="navbar-a" href="{% url 'pagos:pantalla_pivote' %}">Tabla Pivote</a>
-                
+                <a class="navbar-a" href="{% url 'pagos:correos_saldos' %}">Enviar Saldos Por Correo</a>
+                <a class="navbar-a" href="{% url 'pagos:correos_morosos' %}">Enviar Morosos Por Correo</a>
             </div>
         </div>
         <div class="dropdown">
