--- a/mysite/templates/base_datatable.html
+++ b/mysite/templates/base_datatable.html
@@ -45,6 +45,7 @@
                     <a class="navbar-a" href="{% url 'pagos:pantalla_pivote' %}">Tabla Pivote</a>
                     <a class="navbar-a" href="{% url 'pagos:definicion_tipo_pago' %}">Definir tipos de pago</a>
                     <a class="navbar-a" href="{% url 'pagos:correos_saldos' %}">Enviar Saldos Por Correo</a>
+                    <a class="navbar-a" href="{% url 'pagos:correos_morosos' %}">Enviar Morosos Por Correo</a>
                 </div>
             </div>
             <div class="dropdown navbar-item">
